// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkLogo renders without error 1`] = `
<View
  style={
    {
      "borderColor": "#131313",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 0,
      "flexDirection": "column",
      "height": 20,
      "overflow": "hidden",
      "width": 20,
      "zIndex": 10,
    }
  }
  testID="network-logo"
>
  <Image
    resizeMode="contain"
    source="mock-asset-BASE_LOGO.png"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
  />
</View>
`;

exports[`TransactionSummaryNetworkLogo renders without error 1`] = `
<View
  style={
    {
      "borderColor": "#131313",
      "borderRadius": 6.8999999999999995,
      "borderStyle": "solid",
      "borderWidth": 1.5,
      "flexDirection": "column",
      "height": 23,
      "overflow": "hidden",
      "width": 23,
      "zIndex": 10,
    }
  }
  testID="network-logo"
>
  <Image
    resizeMode="contain"
    source="mock-asset-BASE_LOGO.png"
    style={
      {
        "height": 20,
        "width": 20,
      }
    }
  />
</View>
`;
